# Simple-FOC

./: .gitignore  CMakeLists.txt
examples_linux/hardware_specific_examples/SimpleFOCMini/open_loop/: open_loop.cpp
examples_linux/hardware_specific_examples/SimpleFOCMini/position_control/: as5600_position_control.cpp
examples_linux/motion_control/open_loop_motor_control/open_loop_position_example/: open_loop_position_example.cpp
examples_linux/motion_control/open_loop_motor_control/open_loop_velocity_example/: open_loop_velocity_example.cpp
examples_linux/motion_control/position_motion_control/magnetic_sensor/angle_control/: angle_control.cpp
examples_linux/motion_control/velocity_motion_control/magnetic_sensor/velocity_control/: velocity_control.cpp
examples_linux/utils/calibration/find_sensor_offset_and_direction/: find_sensor_offset_and_direction.cpp
examples_linux/utils/sensor_test/magnetic_sensors/magnetic_sensor_i2c/magnetic_sensor_i2c_example/: magnetic_sensor_i2c_example.cpp
src/hal/: APrint.cpp  APrint.h  ASerial.cpp  ASerial.h  AStream.cpp  AStream.h  AString.cpp  AString.h  ATime.cpp  ATime.h  Arduino.cpp  Arduino.h  Astring.h  GPIO.cpp  GPIO.h  PWM.cpp  PWM.h  SPI.cpp  SPI.h  Wire.cpp  Wire.h  print.h  stream.h
